[package]
name = "flexbox"
version = "0.0.1"
authors = ["132yse <1533540012@qq.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/yisar/flexbox"
documentation = "https://github.com/yisar/flexbox"
homepage = "https://crates.io/crates/flexbox"
description = """
Layout engine
"""
keywords = ["layout-engine"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
