[package]
name = "soga"
version = "0.0.1"
authors = ["132yse <1533540012@qq.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/yisar/soga"
documentation = "https://github.com/yisar/soga"
homepage = "https://crates.io/crates/soga"
description = """
Layout engine
"""
keywords = ["layout-engine"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
